# ElliottWave-Algorithm

./: .gitignore  BTC-USD_1minute_data_cleaned.csv  BTC-USD_5mins_data.csv  BTC-USD_5minute_data.csv  ETH-USD_5mins_data.csv  ETH-USD_5minute_data.csv  LICENSE  README.md  additionalNotes.txt  alpaca_trade.py  backtest.py  backtest_update.py  backtestduplicate.py  cadf_test.py  event_signals.py  mean_reversion.py  pyproject.toml
Account_Details/: data_importation.py  get_assets.py
Charts/: ewc_fibo.py  ewc_plots.py
Trends/: correction.py  correction_inverse.py  impulse.py  impulse_inverse.py
Waves/: corrective_abc.py  corrective_five.py  motive_abc.py  motive_five.py
core/: __init__.py  data_manager.py  fibonacci_calculator.py  real_time_peak_detector.py
data/: BTC-USD_1minute_data.csv
logs/: ElliottWaveStrategy_2025-07-22_14-41-25_stats.csv  ElliottWaveStrategy_2025-07-22_17-48-28_settings.json  EnhancedElliottWaveStrategy_2025-10-18_16-51-13_trades.csv  EnhancedElliottWaveStrategy_2025-10-20_11-47-10_settings.json  EnhancedElliottWaveStrategy_2025-10-20_12-22-58_settings.json  EnhancedElliottWaveStrategy_2025-10-20_13-11-26_trades.csv  EnhancedElliottWaveStrategy_2025-10-20_14-06-52_trades.csv  EnhancedElliottWaveStrategy_2025-10-20_15-15-22_trades.csv
scripts/: run_backtest.py
src/algostack/Trends/: correction.py  correction_inverse.py  impulse.py  impulse_inverse.py
src/algostack/Waves/: corrective_abc.py  corrective_five.py  fibos.py  motive_abc.py  motive_five.py
src/algostack/utils/: data_filter.py
waves_manager/: __init__.py  waves_manager.py
